@@ -1,5 +1,9 @@
 2004-01-22  Xavier Ordoquy   <xordoquy@wanadoo.fr>
 
+	* src/planner-ttable-model.c: resources are removed from the ttable.
+
+2004-01-22  Xavier Ordoquy   <xordoquy@wanadoo.fr>
+
 	* src/planner-ttable-row.c: fixed segfault when leaving planner.
 
 2004-01-15  Alvaro del Castillo  <acs@barrapunto.com>
